--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "array-foreach-async": "^1.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eosjs": "^22.1.0",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
     "util": "^0.12.4"
