--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@cobo/eos": "^0.2.0",
     "array-foreach-async": "^1.0.1",
+    "bip39": "^3.0.4",
+    "bitcoinjs-lib": "^5.2.0",
+    "bitcore-lib": "^8.25.10",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eosjs": "^22.1.0",
+    "ethereumjs-util": "^7.1.0",
     "express": "^4.17.1",
+    "fsevents": "^2.3.2",
     "mysql2": "^2.2.5",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
